* Fixed applying box-shadow style to input elements on iOS Safari

--- a/packages/jezvejs/src/Components/DropDown/components/Input/Input.scss
+++ b/packages/jezvejs/src/Components/DropDown/components/Input/Input.scss
@@ -12,6 +12,7 @@
   min-width: 50px;
   background: var(--dd-input-bg);
   color: var(--dd-input-text);
+  appearance: none;
 
   &::placeholder {
     color: var(--dd-placeholder) !important;
