--- a/packages/jezvejs/src/Components/InputGroup/InputGroup.scss
+++ b/packages/jezvejs/src/Components/InputGroup/InputGroup.scss
@@ -37,6 +37,7 @@
 /* Input element */
 .input-group__input {
   flex-shrink: 1;
+  appearance: none;
 }
 
 /* Input group text */
